complete service section

--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@
 }
 
 #home {
+  box-sizing: border-box;
   position: relative;
-  height: 100vh;
-  width: 100vw;
+  height: 94vh;
   background: linear-gradient(
       to bottom,
       rgba(2, 2, 2, 0.1),
@@ -144,4 +144,59 @@
   background-color: rgba(255, 255, 255, 0.5);
   cursor: pointer;
   transition: var(--transition-one-tenth);
+}
+
+/* ---------- Services ---------- */
+
+#services_container {
+  height: 70vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#services {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 5em;
+}
+#services .card {
+  width: 25em;
+  height: 30em;
+  padding: 2em;
+  text-align: justify;
+  border-radius: 1em;
+  box-sizing: border-box;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.089);
+}
+#services .card .img {
+  width: 10em;
+  height: 10em;
+  margin: auto;
+  border-radius: 50%;
+}
+#services .card h2 {
+  color: black;
+  padding: 1em 0;
+}
+#services .card p {
+  font-size: 17px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(65, 63, 63);
+  line-height: 2;
+}
+
+/* ---------- Service card images ---------- */
+#services .card .img-hiking {
+  background: url(/images/hiking-clipart.png) no-repeat center;
+  background-size: cover;
+}
+#services .card .img-trails {
+  background: url(/images/trails-clipart.gif) no-repeat center;
+  background-size: cover;
+}
+#services .card .img-camping {
+  background: url(/images/camping-clipart.jpg) no-repeat center;
+  background-size: cover;
 }
