--- a/style.css
+++ b/style.css
@@ -5,13 +5,22 @@
   --secondary-color: rgb(220, 220, 220);
   --dark-text-color: #2c3e50;
   --highlighted-dark-text-color: #34495e;
-  --transition-one-tenth: 0.1s ease-in-out;
-  --transition-one-second: 1s ease-in-out;
+  --transition-one-tenth: all 0.1s ease-in-out;
+  --transition-one-second: all 1s ease-in-out;
+  --transition-two-second: all 2s ease-in-out;
+}
+
+@font-face {
+  font-family: heebo;
+  src: url(./webfontkit-20220202-194011/heebo-variablefont_wght-webfont.woff);
+  font-family: heebo;
+  src: url(./webfontkit-20220202-194011/heebo-variablefont_wght-webfont.woff2);
 }
 
 * {
   margin: 0;
   padding: 0;
+  font-family: heebo, Arial, Helvetica, sans-serif;
 }
 
 #home {
@@ -20,6 +29,7 @@
   height: 94vh;
   background: linear-gradient(to top, rgba(2, 2, 2, 0.1), rgba(0, 0, 0, 0.3)),
     url(/images/BG-1.jpg) no-repeat fixed center;
+  overflow: y;
 }
 
 /* ---------- Navbar ---------- */
@@ -28,7 +38,6 @@
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
-  padding: 1em;
 }
 
 #nav-logo {
@@ -50,8 +59,8 @@
 
 #nav-links li {
   font-weight: bold;
+  font-size: small;
   list-style: none;
-  font-size: large;
 }
 #nav-links li a {
   padding: 0.5em;
@@ -150,119 +159,213 @@
   transition: var(--transition-one-tenth);
 }
 
-/* ---------- Services ---------- */
+/* ---------- service__section ---------- */
 
-#services_container {
-  height: 70vh;
+#section-1 {
+  max-height: 100vh;
+  height: 100vh;
+  box-sizing: border-box;
+  padding: 5em;
+  transition: var(--transition-one-second);
+}
+
+#section__container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+
+#service__section {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 2em;
+  row-gap: 2.5em;
+  box-sizing: border-box;
+  padding: 3em;
+}
+
+#service__section .card {
+  box-sizing: border-box;
+  position: relative;
+  width: 550px;
+  height: 310px;
+  border-radius: 1em;
+  border-width: 2px;
+  border-style: solid;
+  border-color: rgb(0, 150, 136);
+  border-image: initial;
+}
+
+#service__section .card h2 {
+  position: absolute;
+  top: -1em;
+  left: 0.8em;
+  width: fit-content;
+  height: fit-content;
+  font-weight: normal;
+  background: white;
+  padding: 0px 20px;
+  border-radius: 0.5em;
+  border-bottom: 2px solid rgb(0, 150, 136);
+}
+
+#service__section .card p {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  bottom: 1em;
+  left: 2em;
+  font-size: 14px;
+  padding: 0px 2em 0px 0px;
+}
+
+#service__section .btn--card {
+  box-sizing: border-box;
+  width: 550px;
+  height: 310px;
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-#services {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 5em;
-  transition: var(--transition-one-second);
-}
-#services .card {
-  width: 25em;
-  height: 30em;
-  padding: 2em;
-  text-align: justify;
-  box-sizing: border-box;
-  border-top: 1px solid var(--secondary-hook-color);
-  border-bottom: 1px solid var(--secondary-hook-color);
-  color: var(--dark-text-color);
-}
-#services .card .img {
-  width: 10em;
-  height: 10em;
-  margin: auto;
-  border-radius: 50%;
-}
-#services .card h2 {
-  color: inherit;
-  padding: 1em 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-#services .card p {
-  font-size: 17px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: rgb(65, 63, 63);
-  line-height: 2;
+#service__section .button--get-started {
+  background-color: transparent;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(0, 150, 136);
+  border-image: initial;
+  padding: 1em 5em;
+  border-radius: 2em;
+  transition: all 1s ease 0s;
 }
 
 /* ---------- Service card images ---------- */
-#services .card .img-hiking {
-  background: url(/images/camping-clipart) no-repeat center;
+#service__section .card .img {
+  width: 100%;
+  height: 100%;
   background-size: cover;
+  border-radius: 0.8em;
 }
-#services .card .img-trails {
-  background: url(/images/trails-clipart) no-repeat center;
-  background-size: cover;
+
+#service__section .card .img-hiking {
+  background-image: url(/images/hiking);
 }
-#services .card .img-camping {
-  background: url(/images/camping-clipart) no-repeat center;
-  background-size: cover;
+#service__section .card .img-trails {
+  background-image: url(/images/trails);
+}
+#service__section .card .img-camping {
+  background-image: url(/images/camping);
 }
 
 /* ---------- Weather bar ---------- */
 
-#weather_container {
-  /* set opacity to 1 once we recieve weather data */
-  opacity: 0;
-  height: 20vh;
+#weather__section {
+  width: 270px;
+  height: fit-content;
   box-sizing: border-box;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(0, 188, 212);
+  border-image: initial;
+  border-radius: 1em;
   transition: var(--transition-one-second);
+  padding: 0px 0px 2em;
+}
+
+#weather__section h1 {
+  font-weight: normal;
+  font-size: x-large;
+  background-color: white;
+  width: fit-content;
+  height: fit-content;
+  margin-left: 15px;
+  transform: translateY(-0.8em);
+  padding: 0px 5px;
+}
+
+#weather_search_container {
+  text-align: center;
+  padding: 0px 0px 2em;
+  transition: var(--transition-one-second);
+}
+
+#weather_search {
+  padding: 2px 30px;
+  border-radius: 1em;
+  border-width: 1px;
+  border-style: solid;
+  border-color: grey;
+  border-image: initial;
+}
+
+.weathercard {
+  color: white;
+  width: 80%;
+  border-radius: 0.5em;
+  position: relative;
+  background-color: #32afc8;
+  padding: 15px;
+  margin: 0 auto 0.7em auto;
+}
+
+.weathercard h2 {
+  font-size: 17px;
 }
 
 .img_des {
   display: flex;
   align-items: center;
   justify-content: left;
+  width: fit-content;
 }
 
 .weathercard .img_des img {
-  width: 50px;
+  width: 40px;
 }
 
 .weathercard .img_des p {
-  font-size: small;
-  font-weight: bold;
-}
-
-.weekday {
-  border-bottom: 2px solid var(--hook-color);
-}
-
-.weather-strip {
-  display: flex;
-  justify-content: center;
-}
-
-.weathercard {
-  border-bottom: 2px solid var(--hook-color);
-  width: 11%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: var(--dark-text-color);
-}
-
-.weathercard h2 {
-  font-size: large;
-}
-
-.weather-info {
-  padding: 1em 0 1.5em 1em;
+  font-size: 15px;
+  margin-left: 5px;
 }
 
 .weather-range {
   font-size: 14px;
+  position: absolute;
+  right: 3em;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /* ---------- collective styling --------- */
 
+.section--header {
+  font-weight: normal;
+  width: fit-content;
+  border-bottom: 3px solid rgb(76, 175, 80);
+}
+
 .section_translate-left {
   transform: translateX(-1200px);
+}
+
+/* fixed navbar */
+.fixed {
+  z-index: 2;
+  position: fixed;
+  width: 100%;
+  background-color: rgb(50, 54, 53);
+  height: 50px;
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  transition: var(--transition-one-second);
+}
+
+.fixed #nav-links li {
+  font-size: small;
+  font-weight: normal;
+}
+
+.fixed #nav-contact {
+  font-size: small;
+  padding: 5px 30px;
 }
